# fluent-bit-lsp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml  vsc-extension-quickstart.md
.cargo/: config.toml
.github/workflows/: ci.yaml  publish.yml  release-drafter.yml  release.yml  server-ci.yaml
clients/nvim/: test.lua
clients/vscode/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/vscode/src/: bootstrap.ts  extension.ts  main.ts
clients/vscode/syntaxes/: fluent-bit.tmLanguage.json
flb-schema/: Cargo.toml
flb-schema/src/: config.rs  section.rs
fluent-bit-language-server/: Cargo.toml
fluent-bit-language-server/src/: completion.rs  document.rs  language_server.rs  main.rs  schema.generated.rs
fluent-bit-language-server/src/assets/docs/custom/: calyptia.md
fluent-bit-language-server/src/assets/docs/filter/: grep.md  kubernetes.md  lua.md  modify.md  nest.md  record-modifier.md  rewrite-tag.md  sysinfo.md  type-converter.md
fluent-bit-language-server/src/assets/docs/input/: collectd.md  cpu-metrics.md  disk-io-metrics.md  docker-metrics.md  dummy.md  elasticsearch.md  exec-wasi.md  exec.md  fluentbit-metrics.md  forward.md  head.md  health.md  http.md  kafka.md  kubernetes-events.md  memory-metrics.md  nginx.md  node-exporter-metrics.md  opentelemetry.md  prometheus-remote-write.md  standard-input.md  statsd.md  syslog.md  systemd.md  tail.md  tcp.md  thermal.md  udp.md
fluent-bit-language-server/src/assets/docs/output/: file.md  http.md  oci-logging-analytics.md  prometheus-exporter.md  s3.md  syslog.md
ide-completion/: Cargo.toml
src/: completion.rs  document.rs  language_server.rs  main.rs  parser.rs  semantic_token.rs
syntaxes/: fluent-bit.tmLanguage.json
xtask/: Cargo.toml
xtask/src/: cli.rs  codegen.rs  dist.rs  main.rs  schema.rs
xtask/src/assets/: plugin_info.csv
