[package]
name = "fluent-bit-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-fluentbit = "0.1.0-alpha.4"
anyhow = "1.0.86"
serde_json = "1.0.120"
serde = { version = "1.0.204" , features = ["derive"] }
tower-lsp = "0.20.0"
tokio = { version = "1.38.0", features = ["full"] }
once_cell = "1.19.0"

[build-dependencies]
cc = "*"
