[workspace]
members = [
    "flb-schema",
    "fluent-bit-language-server",
    "xtask",
]
resolver = "2"

[workspace.package]
rust-version = "1.80"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.86"
convert_case = "0.6.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
xshell = "0.2.6"
flb-schema = { path = "flb-schema", version = "0.0.0" }
