[package]
name = "fluent-bit-language-server"
version = "0.0.0"
repository = "https://github.com/sh-cho/fluent-bit-lsp"
description = "A language server for the fluent-bit conf"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "fluent-bit-language-server"

[dependencies]
anyhow.workspace = true
convert_case.workspace = true
tree-sitter = "0.22.6"
tree-sitter-fluentbit = "0.1.0-alpha.4"
tower-lsp = "0.20.0"
tokio = { version = "1.38.0", features = ["full"] }
once_cell = "1.19.0"
thiserror = "1.0.63"
ropey = "1.6.1"

flb-schema.workspace = true

[build-dependencies]
cc = "*"
